# multi-exchange-trader

./: config.env.example  pyproject.toml  pytest.ini  requirements.txt
.omc/state/: agent-replay-c8f850d6-62a4-4b04-964a-95360c300836.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
docs/: strategy_notes.md
systemd/: vilona-bitget.service  vilona-deriv.service
tests/: test_robustness.py  test_web3_async.py
tests/unit/core/: test_registry.py
tests/unit/data/providers/: test_birdeye.py
tests/unit/exchange/dex/: test_base.py
tests/unit/exchange/dex/abi/: __init__.py  test_loader.py
tests/unit/strategy/: test_state_machine.py
tests/unit/strategy/dex/: test_scanner.py  test_sniper.py
tests/unit/utils/: test_web3_async.py
tests/unit/utils/config/: test_loader.py
tests/unit/utils/wallet/: test_wallet.py
tools/: monte_carlo_sim.py  trading_report.py
trading_bot/: factory.py
trading_bot/core/: exchange_abc.py  registry.py
trading_bot/core/errors/: __init__.py  strategy_errors.py
trading_bot/core/interfaces/: __init__.py
trading_bot/core/models/: __init__.py  position.py  trade.py
trading_bot/data/providers/: __init__.py  birdeye.py
trading_bot/exchange/: deriv_exchange.py  simulator.py
trading_bot/exchange/deriv/: __init__.py  actuary.py  arbiter_watchdog.py  dashboard_api.py  longterm_fronttest.py  tick_streamer.py
trading_bot/exchange/dex/: __init__.py  base.py  bsc.py
trading_bot/exchange/dex/abi/: loader.py
trading_bot/exchange/dex/chain/: bsc.py
trading_bot/exchange/dex/services/: swap.py
trading_bot/strategy/: base.py  state_machine.py
trading_bot/strategy/dex/: __init__.py  scanner.py  sniper.py
trading_bot/utils/: confidence.py  indicators.py  monte_carlo.py  shared_config.py  web3_async.py
trading_bot/utils/abi/: loader.py
trading_bot/utils/config/: loader.py
trading_bot/utils/wallet/: __init__.py  manager.py  storage.py
