[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-exchange-trader"
version = "2.0.0-dev"
description = "Multi-exchange trading bot — CEX & DEX, paper/frontest/live modes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "oyi77"},
]
keywords = ["trading", "bot", "exchange", "dex", "cex", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "ccxt>=4.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "ostium-python-sdk>=0.1.10",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "websockets>=12.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dex = [
    "web3>=6.0.0",
    "eth-account>=0.9.0",
]
tui = [
    "rich>=13.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]
all = [
    "multi-exchange-trader[dex,tui,dev]",
]

[project.scripts]
trader = "trading_bot.__main__:main"

[tool.setuptools.packages.find]
include = ["trading_bot*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["trading_bot", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (readability)
]

[tool.ruff.lint.isort]
known-first-party = ["trading_bot"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use external services)",
    "slow: Slow tests",
    "network: Tests requiring network access",
    "dex: DEX-specific tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # incremental adoption
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["trading_bot"]
omit = [
    "trading_bot/ui/*",
    "trading_bot/interface/*",
    "*/test_*",
]

[tool.coverage.report]
show_missing = true
fail_under = 60
